--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -17,8 +17,9 @@
 
 nav {
 	text-transform: uppercase;
-	font-size: 1.2em;
+	font-size: 1.4em;
 	width: 100%;
+	font-weight: bold
 
 	@media #{$mid-point} {
 		text-align: right;
