--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -19,7 +19,7 @@ nav {
 	text-transform: uppercase;
 	font-size: 1.4em;
 	width: 100%;
-	font-weight: bold
+	font-weight: bold;
 
 	@media #{$mid-point} {
 		text-align: right;
