--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -33,7 +33,7 @@ nav {
 	a {
 		margin: 0 3px;
 		padding: 20px 10px;
-		border-bottom: 1px solid rgba(255,255,255,0);
+		border-bottom: 1px solid rgba(0,0,0,0);
 		color: rgba(11,61,27,1);
 		transition: .2s ease-in-out;
 		display: none;
@@ -64,8 +64,8 @@ nav {
 
 	a:hover {
 
-		border-bottom: 1px solid rgba(255,255,255,.3);
-		color: #fff;
+		border-bottom: 1px solid rgba(0,0,0,.3);
+		color: #118927;
 	}
 
 	@media #{$mid-point} {
@@ -74,14 +74,14 @@ nav {
 			border-radius: 5px;
 
 			&:hover {
-				background: #fff;
+				background: #118927;
 				color: $brand-color;
 			}
 		}
 	}
 
 	a.active {
-		color: #fff;
+		color: #118927;
 	}
 
 }
