--- a/_sass/elements.scss
+++ b/_sass/elements.scss
@@ -9,7 +9,7 @@ html, body {
 
 body {
 	font-family: "San Francisco", "Helvetica Neue", "Helvetica", "Arial";
-	background-image: url("{{ site.baseurl }}/images/KozarzeLP1.jpg");
+	background-image: url(https://raw.githubusercontent.com/maxiemoose/kozarze/main/images/KozarzeLP1.jpg);
 	background-size: contain;
 	background-repeat: no-repeat;
 	background-position: center,center;
