--- a/_sass/landing-page.scss
+++ b/_sass/landing-page.scss
@@ -32,9 +32,9 @@
 }
 
 .hero {
-	color: #ffffff;
+//	color: #ffffff;
 	text-align: center;
-	background: linear-gradient(to bottom, $middle-gradient-color 0%, $secondary-brand-color 100%) no-repeat #a05fb7;
+//	background: linear-gradient(to bottom, $middle-gradient-color 0%, $secondary-brand-color 100%) no-repeat #a05fb7;
 	padding-top: 50px;
 
 	p {
