--- a/_sass/elements.scss
+++ b/_sass/elements.scss
@@ -10,7 +10,7 @@ html, body {
 }
 
 body {
-	font-family: "San Francisco", "Helvetica Neue", "Helvetica", "Arial";
+	font-family: "San Francisco", "Merienda", "Helvetica", "Arial";
 }
 
 a {
