--- a/_sass/elements.scss
+++ b/_sass/elements.scss
@@ -1,7 +1,7 @@
 @font-face {
     font-family: 'merienda';
-    src: url('https://github.com/maxiemoose/kozarze/blob/main/images/fonts/merienda/merienda-variablefont_wght-webfont.woff2') format('woff2'),
-         url('https://github.com/maxiemoose/kozarze/blob/main/images/fonts/merienda/merienda-variablefont_wght-webfont.woff') format('woff');
+    src: url('https://github.com/maxiemoose/kozarze/raw/main/images/fonts/merienda/merienda-variablefont_wght-webfont.woff2') format('woff2'),
+         url('https://github.com/maxiemoose/kozarze/raw/main/images/fonts/merienda/merienda-variablefont_wght-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
@@ -19,7 +19,7 @@ html, body {
 }
 
 body {
-	font-family: "San Francisco", "merienda", "Helvetica", "Arial";
+	font-family: "merienda", "San Francisco", "Helvetica", "Arial";
 }
 
 
