--- a/_sass/elements.scss
+++ b/_sass/elements.scss
@@ -1,7 +1,7 @@
 @font-face {
     font-family: 'merienda';
     src: url('../images/fonts/merienda/merienda-variablefont_wght-webfont.woff2') format('woff2'),
-         url('../images/fonts/merienda/merienda-variablefont_wght-webfont.woff') format('woff');
+         url('../images/fonts/merienda/merienda-variablefont_wght-webfont.woff') format('woff'),
 	 url('../images/fonts/merienda/merienda-variablefont_wght-webfont.ttf') format('ttf');
     font-weight: normal;
     font-style: normal;
