--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -48,7 +48,7 @@ nav {
 			display: inline;
 			position: absolute;
 			right: 10px;
-			top: -22px;
+		//	top: -22px;
 			font-size: 1.9em;
 			border: 0;
 
