--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -37,9 +37,9 @@ header {
 	.company-name {
 		font-size: 1.7em;
 		line-height: 0;
-		@media only screen and (max-width: 800px){
-			padding-top: 8vw;
-		}
+	//	@media only screen and (max-width: 800px){
+	//		padding-top: 8vw;
+	//	}
 		a {
 			display: inline-block;
 		}
