--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -21,10 +21,18 @@ nav {
 	width: 100%;
 	font-weight: bold;
 
-	@media #{$mid-point} {
-		text-align: right;
+//	@media #{$mid-point} {
+//		text-align: right;
+//		position: absolute;
+//		top: 40px;
+//		right: 0;
+//		padding: 0 5vw;
+//	}
+	@media only screen and (max-width: 800px){
+		text-align: center;
 		position: absolute;
-		top: 40px;
+		font-size: 1em;
+		top: 80px;
 		right: 0;
 		padding: 0 5vw;
 	}
