--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -21,14 +21,14 @@ nav {
 	width: 100%;
 	font-weight: bold;
 
-//	@media #{$mid-point} {
-//		text-align: right;
-//		position: absolute;
-//		top: 40px;
-//		right: 0;
-//		padding: 0 5vw;
-//	}
-	@media only screen and (max-width: 800px){
+	@media #{$mid-point} {
+		text-align: right;
+		position: absolute;
+		top: 40px;
+		right: 0;
+		padding: 0 5vw;
+	}
+	@media only screen and (max-width: 1000px){
 		text-align: center;
 		position: absolute;
 		font-size: 1em;
