--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -1,11 +1,11 @@
 .container, .text-container {
-	margin: 0 auto;
+//	margin: 0 auto;
 	position: relative;
-	padding: 0 5vw;
+	padding: 0 2%;
 }
 
 .text-container {
-	max-width: 90%;
+	max-width: 100%;
 }
 
 .container {
