--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -33,7 +33,7 @@ nav {
 		margin: 0 3px;
 		padding: 20px 10px;
 		border-bottom: 1px solid rgba(0,0,0,0);
-		color: rgba(11,61,27,1);
+		color: #116127;
 		transition: .2s ease-in-out;
 		display: none;
 
@@ -47,7 +47,7 @@ nav {
 			display: inline;
 			position: absolute;
 			right: 10px;
-			top: -22px;
+			top: -5px;
 			font-size: 1.9em;
 			border: 0;
 
