--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -47,7 +47,7 @@ nav {
 			display: inline;
 			position: absolute;
 			right: 10px;
-			top: -4vh;
+			top: -9%;
 			font-size: 3em;
 			border: 0;
 
