--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -47,7 +47,9 @@ header {
 		img {
 			display: block;
 			width: auto;
-			height: 100px
+			max-height: 100px;
+			height: 10vw;
+			margin-right: 200%;
 		}
 	}
 }
