--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -24,7 +24,7 @@ nav {
 	@media #{$mid-point} {
 		text-align: right;
 		position: absolute;
-		top: 40px;
+		top: 40%;
 		right: 0;
 		padding: 0 2%;
 	}
