--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,7 @@
 		<header>
 			<div class="container">
 				<div class="company-name"><a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/Kozarze-logo.svg"/></a></div>
+				<a class="nav-toggle" id="open-nav" href="#">&#9776;</a>
 				{% include navigation.html %}
 			</div>
 		</header>
