--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,8 +23,10 @@
 	<body>
 		<header>
 			<div class="container">
-				<div class="company-name"><a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/Kozarze-logo.svg"/></a></div>
-				<a class="nav-toggle" id="open-nav" href="#">&#9776;</a>
+				<div class="row">
+					<div class="company-name"><a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/Kozarze-logo.svg"/></a></div>
+					<div class="nav-toggle" id="open-nav" href="#">&#9776;</div>
+				</div>
 				{% include navigation.html %}
 			</div>
 		</header>
