--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -60,8 +60,10 @@ header {
 		display: inline;
 		position: absolute;
 		right: 1px;
-		font-size: 2em;
+		font-size: 2.5em;
 		color: $brand-color;
+		font-weight: bold;
+		top: 10%;
 
 		@media #{$mid-point} {
 			display: none;
