--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -20,6 +20,9 @@ nav {
 	font-size: 1.6em;
 	width: 100%;
 	font-weight: bold;
+	background: rgba(255,255,255,0.6);
+	position: absolute;
+	
 
 	@media #{$mid-point} {
 		text-align: right;
