--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,9 +27,10 @@
 					<div class="company-name"><a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/Kozarze-logo.svg"/></a></div>
 					<div class="nav-toggle" id="open-nav" href="#">&#9776;</div>
 				</div>
-				{% include navigation.html %}
+<!--				{% include navigation.html %}-->
 			</div>
 		</header>
+		{% include navigation.html %}
 		{{ content }}
 		<footer>
 			<div class="container">
