--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -19,7 +19,7 @@
 
 header {
 	color: #fff;
-	padding: 20px 0;
+//	padding: 20px 0;
 	background: rgba(255,255,255,.6);
 //	background: linear-gradient(to bottom, $brand-color 0%, $middle-gradient-color 100%) no-repeat $brand-color;
 
