--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -40,7 +40,7 @@ header {
 		font-size: 1.7em;
 		line-height: 0;
 		width: 90%;
-		padding: 20 2%;
+		padding: 20px 2%;
 	//	@media only screen and (max-width: 800px){
 	//		padding-top: 8vw;
 	//	}
