--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -1,13 +1,13 @@
 .nav-open nav {
-	border-bottom: 1px dotted rgba(255, 255, 255, .2);
-	padding: 20px 0;
+	left: 0;
 	a {
 		display: block;
+		padding: 2px 12%
 	}
 
 	@media #{$mid-point} {
 		border: 0;
-		padding: 0 20px;
+		padding: 0px 20px;
 
 		a {
 			display: inline;
