--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -1,7 +1,7 @@
 .nav-open nav {
 	left: 0;
 	padding-bottom: 10px;
-	padding-left: 12%
+	padding-left: 12%;
 	background: rgba(255,255,255,0.6);
 	a {
 		display: block;
